fixed calendar overflow, started openLog(row) function in scripts.js

--- a/app/webroot/css/global.css
+++ b/app/webroot/css/global.css
@@ -412,6 +412,7 @@ table.results th {
 table.results tr {
 	/*border:1px solid #759bb8;*/
     border: none;
+    cursor: default;
 }
 
 table.results tr:last-child {
